--- a/index.html
+++ b/index.html
@@ -121,9 +121,7 @@
             </div>
             <div class="section-line first-line"></div>
             <div class="cart-items-section">
-
               <div id="cart-item-container" style="min-height: 0;">
-
               </div>
             </div>
           </div>
@@ -295,7 +293,7 @@
 
               <div class="d-flex payment-info-block">
                 <div class="mr-8">
-                  <img src="./icons/Frame 277132129.svg" alt="">
+                  <img src="./icons/Frame277132129.svg" alt="">
                 </div>
                 <div class="mr-12">
                   1234 56•• •••• 1234
@@ -451,7 +449,7 @@
               </div>
               <div class="fz-13 payment-info-block cart-mobile-version d-flex">
                 <div class="mr-8 bank-icon">
-                  <img src="./icons/Frame 277132129.svg" alt="">
+                  <img src="./icons/Frame277132129.svg" alt="">
                 </div>
                 <div class="lh-28">
                   1234 12•• •••• 1234
